Version 0.4 (...)

- Added BlockCommandHandler to grizzled.cmd, to handle commands consisting
  of blocks of lines between a start and end line.
- Added HiddenCommandHandler to grizzled.cmd, allowing special commands that
  are not displayed in the help.
- Changed EOF handling in grizzled.cmd slightly.
- Added createTemporaryDirectory() and withTemporaryDirectory() to
  grizzled.file.util module.
- Added isEmpty() to grizzled.file.GrizzledFile (which can be implicitly
  converted to and from java.io.File).
- Fixed problem with prefix handling in grizzled.string.WordWrapper.
- Now uses sbt 0.7.2

---------------------------------------------------------------------------
Version 0.3.1 (2 March, 2010)

- grizzled.cmd changes:

  * "history" command now uses this syntax:
        history [-n] [regex]
     where "n" is the maximum number of entries to show, and "regex" is a
     regular expression to filter history entries.
  * Some commands starting with "." were being incorrectly limited to a
    single character (e.g., ".r", but not ".read").
  * General clean-up and bug fixing in the "redo command" handler.
  * CommandHandler classes can now exempt themselves from the history.
  * The RedoCommandHandler (which handles the "r" and "!" commands) now
    exempts itself from the history.

---------------------------------------------------------------------------
Version 0.3 (20 February, 2010)

- Converted to Scala 2.8.0
- Now must be compiled with sbt version 0.7.0 or better.
- Fixed tail call optimization problem in grizzled.io.RichInputStream.
  Thanks to Claudio Bley (cbley /at/ av-test.de)
- Added grizzled.parsing.MarkdownParser, for parsing Markdown documents.
  (Uses the Showdown Javascript library, via Mozilla Rhino.)
- grizzled.cmd.HelpHandler now supports a ".help" alias.
- Added grizzled.util.withCloseable control structure.
- The grizzled.readline API now uses org.clapper.editline EditLine